# src/main/kotlin/com/lowbudgetlcs/routes/dto/accounts/RiotAccountDtoMappers.kt
@@ -3,12 +3,10 @@ package com.lowbudgetlcs.routes.dto.accounts
 import com.lowbudgetlcs.domain.models.NewRiotAccount
 import com.lowbudgetlcs.domain.models.RiotAccount
 import com.lowbudgetlcs.domain.models.RiotPuuid
-import com.lowbudgetlcs.domain.models.toPlayerId
 
 fun NewRiotAccountDto.toNewRiotAccount(): NewRiotAccount =
     NewRiotAccount(
-        riotPuuid = RiotPuuid(riotPuuid),
-        playerId = playerId?.toPlayerId()
+        riotPuuid = RiotPuuid(riotPuuid)
     )
 
 fun RiotAccount.toDto(): RiotAccountDto =
